// ==========================================
// ERD VIEW: USER, AREA, CHAT, MODEL, NOTIFICATION
// Use this view for account and support features.
// ==========================================

Table roles {
  id integer [primary key]
  role_name varchar
}

Table attachment {
  id integer [primary key]
  file_name varchar
  file_url varchar
  mime_type varchar
}

Table users {
  id integer [primary key]
  role_id integer
  attachment_id integer
  email varchar [unique]
  full_name varchar
  is_active boolean
}

Table area_infor {
  id integer [primary key]
  user_id integer
  area_name varchar
  province varchar
  latitude float
  longitude float
}

Table chat_session {
  id integer [primary key]
  user_id integer
  session_title varchar
  last_message text
  last_message_at timestamp
}

Table chat_message {
  id integer [primary key]
  session_id integer
  attachment_id integer
  sender_type varchar
  message_content text
}

Table notification {
  id integer [primary key]
  user_id integer
  title varchar
  content varchar
  notification_type varchar
  is_read boolean
}

Table crop_type {
  id integer [primary key]
  crop_name varchar
}

Table aimodel {
  id integer [primary key]
  croptype_id integer
  model_name varchar
  model_version varchar
  is_active boolean
}

Table model_performance {
  id integer [primary key]
  model_id integer
  accuracy numeric
  f1_score numeric
  precision numeric
  recall numeric
  metric_date timestamp
}

Ref: users.role_id > roles.id
Ref: users.attachment_id > attachment.id
Ref: area_infor.user_id > users.id
Ref: chat_session.user_id > users.id
Ref: chat_message.session_id > chat_session.id
Ref: chat_message.attachment_id > attachment.id
Ref: notification.user_id > users.id
Ref: aimodel.croptype_id > crop_type.id
Ref: model_performance.model_id > aimodel.id
